[package]
name = "web-socket-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.8.0"
actix-web = "4"
actix-web-actors = "4.2.0"
uuid = { version = "0.8.1", features = ["v4"] }
